--- a/app/views/static/questions.erb
+++ b/app/views/static/questions.erb
@@ -60,6 +60,10 @@
             <p id="question_count_votes"> <%= question.votes_count %></p>
             <p>votes</p>
           </div>
+          <div id="question_answers">
+            <p id="question_count_answers"> <%= question.answers.count %></p>
+            <p>answers</p>
+          </div>
         </div>
       </div>
     <% end %>
