--- a/app/views/static/profile.erb
+++ b/app/views/static/profile.erb
@@ -53,7 +53,9 @@
           <button>Delete question</button>
         </li>
         <li>
-          <button>My answers</button>
+          <form action="/answer/<%= current_user.id %>" method="get">
+            <input type="submit" value="My answers">
+          </form>
         </li>
         <li>
           <button>Edit answer</button>
@@ -133,6 +135,25 @@
           <% end %>
         <% end %>
       </div>
+
+
+      <div id="all_user_questions">
+        <% if @all_user_answers %>
+          <% @all_user_answers.each do |answer| %>
+            <div id="question">
+              <div id='title'>
+                <%= "<p>#{answer.content} </p>" %>
+              </div>
+
+              <form action="/user/<%= current_user.id %>/question/<%= answer.question_id %>" method="get" id='open'>
+                <input type="submit" value="Open Answer">
+              </form>
+
+            </div>
+          <% end %>
+        <% end %>
+      </div>
+
     </div>
   </div>
 
