--- a/app/views/static/profile.erb
+++ b/app/views/static/profile.erb
@@ -137,10 +137,10 @@
       </div>
 
 
-      <div id="all_user_questions">
+      <div id="all_user_answers">
         <% if @all_user_answers %>
           <% @all_user_answers.each do |answer| %>
-            <div id="question">
+            <div id="answer">
               <div id='title'>
                 <%= "<p>#{answer.content} </p>" %>
               </div>
@@ -153,6 +153,8 @@
           <% end %>
         <% end %>
       </div>
+
+
 
     </div>
   </div>
