--- a/app/views/static/question_answers.erb
+++ b/app/views/static/question_answers.erb
@@ -71,11 +71,22 @@
                   </div>
                 </div>
               <% else %>
-                <div id="footer_answer">
-                  <div id="answer_votes">
+                <div id="footer_answer_edit_delete">
+
+                  <div id="edit_delete_answers" >
+                    <form>
+                      <input type="submit" value="Edit" id="edit_answer" class="edit_delete_answers">
+                    </form>
+                    <form>
+                      <input type="submit" value="Delete" id="delete_answer" class="edit_delete_answers">
+                    </form>
+                  </div>
+
+                  <div id="user_answer_votes">
                     <p id="count_votes"> <%= answer.votes_count %></p>
                     <p>votes</p>
                   </div>
+
                 </div>
               <% end %>
             </div>
