fix js for profile, hide all div, and show only the one that i push the button

--- a/app/views/static/questions.erb
+++ b/app/views/static/questions.erb
@@ -3,7 +3,7 @@
     <div id="title">
       <p><a href="/question">Quora</a></p>
       <div id="header_nav">
-        <p><a href="/">My Profile</a></p>
+        <p><a href="/profile">My Profile</a></p>
       </div>
     </div>
 
