--- a/app/views/static/profile.erb
+++ b/app/views/static/profile.erb
@@ -3,7 +3,7 @@
     <div id="title">
       <p><a href="/question">Quora</a></p>
       <div id="header_nav">
-        <p><a href="/">My Profile</a></p>
+        <p><a href="/profile">My Profile</a></p>
       </div>
     </div>
     <div id="form">
@@ -39,23 +39,26 @@
     <div class="col-md-3" id='nav_menue'>
       <ul>
         <li>
-          <button>Add question</button>
+          <button class="trigger-menu" data-open="main_question_form">Add question</button>
         </li>
         <li>
-          <form action="/user/<%= current_user.id%>/question" method="get">
-            <input type="submit" value="My Questions">
-          </form>
+          <!-- <form action="/user/<%= current_user.id%>/question" method="get">
+            <input type="hidden" name="user_id" value="<%= current_user.id %>" id="user_id_for_all_question">
+            <input type="submit" value="My Questions" id="find_all_user_question">
+          </form> -->
+          <button class="trigger-menu" data-open="all_user_questions">My question</button>
         </li>
         <li>
-          <button>Edit question</button>
+          <button class="trigger-menu" data-open="edit_question">Edit question</button>
         </li>
         <li>
-          <button>Delete question</button>
+          <button class="trigger-menu" data-open="all_delete_question">Delete question</button>
         </li>
         <li>
-          <form action="/answer/<%= current_user.id %>" method="get">
+          <!-- <form action="/answer/<%= current_user.id %>" method="get">
             <input type="submit" value="My answers">
-          </form>
+          </form> -->
+          <button class="trigger-menu" data-open="all_user_answers">My answers</button>
         </li>
         <li>
           <form action="/question" method="get">
@@ -66,7 +69,7 @@
     </div>
 
     <div class="col-md-8 col-md-offset-1">
-      <div id="question_form" >
+      <div id="main_question_form" class='hidden menu'>
         <form action="/question" method="post">
           <input id="title" type="text" name="question[title]" placeholder="Title">
           <textarea id="content" name="question[content]" placeholder="content"></textarea>
@@ -76,12 +79,10 @@
       </div>
 
 
-      <div id="edit_question">
+      <div id="edit_question" class='hidden menu'>
         <% if @all_user_questions %>
           <% @all_user_questions.each do |question| %>
             <div>
-              <%= "<p>#{question.title} </p>" %>
-              <button>Edit</button>
               <div id="question_form" >
                 <form action="/question/<%= question.id %>" method="post">
                   <input type="hidden" name="_method" value="patch">
@@ -96,10 +97,10 @@
       </div>
 
 
-      <div id="all_delete_question">
+      <div id="all_delete_question" class='hidden menu'>
         <% if @all_user_questions %>
           <% @all_user_questions.each do |question| %>
-            <div>
+            <div id="delete_question_form">
               <%= "<p>#{question.title} </p>" %>
               <div id="delete_question" >
                 <form action="/question/<%= question.id %>" method="post">
@@ -113,7 +114,7 @@
       </div>
 
 
-      <div id="all_user_questions">
+      <div id="all_user_questions" class='hidden menu'>
         <% if @all_user_questions %>
           <% @all_user_questions.each do |question| %>
             <div id="question">
@@ -131,7 +132,7 @@
       </div>
 
 
-      <div id="all_user_answers">
+      <div id="all_user_answers" class='hidden menu'>
         <% if @all_user_answers %>
           <% @all_user_answers.each do |answer| %>
             <div id="answer">
@@ -154,3 +155,5 @@
   </div>
 
 </div>
+
+<script src="/js/profile.js"></script>
