--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -97,7 +97,8 @@ div#answer_content p {
   font-size:20px;
 }
 
-div.row div.col-md-8 div#question_form {
+div.row div.col-md-8 div#question_form,
+div.row div.col-md-8 div#main_question_form {
   /*display:none;*/
   margin-top:20px;
   margin-left:25px;
@@ -108,23 +109,27 @@ div.row div.col-md-8 div#question_form {
   background-color:white;
 }
 
-div.row div.col-md-8 div#question_form form {
+div.row div.col-md-8 div#question_form form,
+div.row div.col-md-8 div#main_question_form form {
   height:320px;
 }
 
-div.row div.col-md-8 div#question_form form input {
+div.row div.col-md-8 div#question_form form input,
+div.row div.col-md-8 div#main_question_form form input {
   display:block;
   border-radius:5px;
 }
 
-div.row div.col-md-8 div#question_form form input#title {
+div.row div.col-md-8 div#question_form form input#title,
+div.row div.col-md-8 div#main_question_form form input#title {
   margin:25px 0 10px 30px;
   background-color:white;
   width:300px;
   border-radius:5px;
 }
 
-div.row div.col-md-8 div#question_form form textarea#content {
+div.row div.col-md-8 div#question_form form textarea#content,
+div.row div.col-md-8 div#main_question_form form textarea#content {
   background-color:white;
   margin:0 0 10px 30px;
   width:500px;
@@ -134,7 +139,8 @@ div.row div.col-md-8 div#question_form form textarea#content {
   box-shadow:1px 1px 0 #EEEEEE, inset 1px 1px 0 #999999;
 }
 
-div.row div.col-md-8 div#question_form form input#submit {
+div.row div.col-md-8 div#question_form form input#submit,
+div.row div.col-md-8 div#main_question_form form input#submit {
   margin:0 0 10px 30px;
 }
 
@@ -185,4 +191,17 @@ div#nav_menue ul li{
 }
 
 
+.hidden {
+  display: none;
+}
 
+
+div#delete_question_form {
+  margin-top:20px;
+  margin-left:25px;
+  height:120px;
+  border:1px solid #EEEEEE;
+  border-radius:5px;
+  box-shadow:2px 2px 0 #EEEEEE, inset 1px 1px 0 #EEEEEE;
+  background-color:white;
+}
