i dont remember what i change

--- a/app/views/static/profile.erb
+++ b/app/views/static/profile.erb
@@ -46,7 +46,7 @@
             <input type="hidden" name="user_id" value="<%= current_user.id %>" id="user_id_for_all_question">
             <input type="submit" value="My Questions" id="find_all_user_question">
           </form> -->
-          <button class="trigger-menu" data-open="all_user_questions">My question</button>
+          <button class="trigger-menu" data-open="all_user_questions">My questions</button>
         </li>
         <li>
           <button class="trigger-menu" data-open="edit_question">Edit question</button>
