--- a/app/views/static/questions.erb
+++ b/app/views/static/questions.erb
@@ -35,24 +35,27 @@
             <div class="col-md-2">
                 <% if question.user_id != current_user.id %>
 
-                <div id="question_upvote_form" >
-                  <form id='question_upvote' action="/question_upvote" method="post">
-                    <input type="hidden" name="upvote[user_id]" value="<%= current_user.id %>">
-                    <input type="hidden" name="upvote[question_id]" value="<%= question.id %>">
-                    <input type="hidden" name="upvote[action]" value="upvote">
-                    <button class="submit_button" type="submit" id="question_upvote"><img src="/img/upvote.png"/></button>
-                  </form>
-                </div>
+                  <% if !question.downvoted?(current_user.id)%>
+                    <div id="question_upvote_form" >
+                      <form id='question_upvote' action="/question_upvote" method="post">
+                        <input type="hidden" name="upvote[user_id]" value="<%= current_user.id %>">
+                        <input type="hidden" name="upvote[question_id]" value="<%= question.id %>">
+                        <input type="hidden" name="upvote[action]" value="upvote">
+                        <button class="submit_button" type="submit" id="question_upvote"><img src="/img/upvote.png"/></button>
+                      </form>
+                    </div>
+                  <% end %>
 
-                <div id="question_downvote_form" >
-                  <form id='question_downvote' action="/question_downvote" method="post">
-                    <input type="hidden" name="downvote[user_id]" value="<%= current_user.id %>">
-                    <input type="hidden" name="downvote[question_id]" value="<%= question.id %>">
-                    <input type="hidden" name="downvote[action]" value="downvote">
-                    <button class="submit_button" type="submit" id="question_downvote"><img src="/img/downvote.png"/></button>
-                  </form>
-                </div>
-
+                  <% if !question.upvoted?(current_user.id)%>
+                    <div id="question_downvote_form" >
+                      <form id='question_downvote' action="/question_downvote" method="post">
+                        <input type="hidden" name="downvote[user_id]" value="<%= current_user.id %>">
+                        <input type="hidden" name="downvote[question_id]" value="<%= question.id %>">
+                        <input type="hidden" name="downvote[action]" value="downvote">
+                        <button class="submit_button" type="submit" id="question_downvote"><img src="/img/downvote.png"/></button>
+                      </form>
+                    </div>
+                    <% end %>
                 <% end %>
 
             </div>
