fix view of upvote and downvote for answers, now user can vote and to change vote he need to take out vote and after only chenge

--- a/app/views/static/question_answers.erb
+++ b/app/views/static/question_answers.erb
@@ -64,18 +64,25 @@
                 <%= "<h4>#{answer.user.first_name}'s answer:</h4>" %>
                 <%= "<p>#{answer.content}</p>" %>
                 <div id="footer_answer">
+
+                <% if !answer.downvoted?(current_user.id) %>
                   <form id='upvote' action="/answer_upvote" method="post">
                     <input type="hidden" name="upvote[user_id]" value="<%= current_user.id %>">
                     <input type="hidden" name="upvote[answer_id]" value="<%= answer.id %>">
                     <input type="hidden" name="upvote[action]" value="upvote">
                     <button class="submit_button" type="submit"><img src="/img/upvote.png"/></button>
                   </form>
+                <% end %>
+
+                <% if !answer.upvoted?(current_user.id) %>
                   <form id='downvote' action="/answer_downvote" method="post">
                     <input type="hidden" name="downvote[user_id]" value="<%= current_user.id %>">
                     <input type="hidden" name="downvote[answer_id]" value="<%= answer.id %>">
                     <input type="hidden" name="downvote[action]" value="downvote">
                     <button class="submit_button" type="submit"><img src="/img/downvote.png"/></button>
                   </form>
+                <% end %>
+
                   <div id="answer_votes">
                     <p id="count_votes"> <%= answer.votes_count %></p>
                     <p>votes</p>
