--- a/app/views/static/question_answers.erb
+++ b/app/views/static/question_answers.erb
@@ -19,55 +19,66 @@
   <% if @question %>
     <div id="question">
 
+
       <div id='title'>
         <%= "<p>#{@question.title} </p>" %>
       </div>
 
-      <div class="row">
-        <div class="col-md-10">
-          <%= "<p>#{@question.content}</p>" %>
-        </div>
-        <div class="col-md-2">
-          <% if @question.user_id != current_user.id %>
 
-            <% if !@question.downvoted?(current_user.id) && !@question.upvoted?(current_user.id)%>
-              <div id="question_upvote_form" >
-                <form id='question_upvote' action="/question_upvote" method="post">
-                  <input type="hidden" name="upvote[user_id]" value="<%= current_user.id %>">
-                  <input type="hidden" name="upvote[question_id]" value="<%= @question.id %>">
-                  <input type="hidden" name="upvote[action]" value="upvote">
-                  <button class="submit_button" type="submit" id="question_upvote"><img src="/img/upvote.png"/></button>
-                </form>
+        <div class="row" id="answer_content_on_question_answer_page">
+          <div class="col-md-10">
+            <%= "<p>#{@question.content}</p>" %>
+          </div>
+          <div class="col-md-2">
+            <% if @question.user_id != current_user.id %>
+              <div id="votes_part">
+                <% if !@question.downvoted?(current_user.id) && !@question.upvoted?(current_user.id)%>
+                  <div id="" >
+                    <form id='question_upvote' action="/question_upvote" method="post">
+                      <input type="hidden" name="upvote[user_id]" value="<%= current_user.id %>">
+                      <input type="hidden" name="upvote[question_id]" value="<%= @question.id %>">
+                      <input type="hidden" name="upvote[action]" value="upvote">
+                      <button class="submit_button" type="submit" id="question_upvote"><img src="/img/upvote.png"/></button>
+                    </form>
+                  </div>
+                  <div id="" >
+                    <form id='question_downvote' action="/question_downvote" method="post">
+                      <input type="hidden" name="downvote[user_id]" value="<%= current_user.id %>">
+                      <input type="hidden" name="downvote[question_id]" value="<%= @question.id %>">
+                      <input type="hidden" name="downvote[action]" value="downvote">
+                      <button class="submit_button" type="submit" id="question_downvote"><img src="/img/downvote.png"/></button>
+                    </form>
+                  </div>
+                <% elsif !@question.upvoted?(current_user.id)%>
+                  <div id="" >
+                    <form id='question_downvote' action="/question_downvote" method="post">
+                      <input type="hidden" name="downvote[user_id]" value="<%= current_user.id %>">
+                      <input type="hidden" name="downvote[question_id]" value="<%= @question.id %>">
+                      <input type="hidden" name="downvote[action]" value="downvote">
+                      <button class="submit_button" type="submit" id="question_downvote"><img src="/img/pressed_downvote.png"/></button>
+                    </form>
+                  </div>
+                <% else %>
+                  <form id='question_upvote' action="/question_upvote" method="post">
+                    <input type="hidden" name="upvote[user_id]" value="<%= current_user.id %>">
+                    <input type="hidden" name="upvote[question_id]" value="<%= @question.id %>">
+                    <input type="hidden" name="upvote[action]" value="upvote">
+                    <button class="submit_button" type="submit" id="question_upvote"><img src="/img/pressed_upvote.png"/></button>
+                  </form>
+                <% end %>
               </div>
-              <div id="question_downvote_form" >
-                <form id='question_downvote' action="/question_downvote" method="post">
-                  <input type="hidden" name="downvote[user_id]" value="<%= current_user.id %>">
-                  <input type="hidden" name="downvote[question_id]" value="<%= @question.id %>">
-                  <input type="hidden" name="downvote[action]" value="downvote">
-                  <button class="submit_button" type="submit" id="question_downvote"><img src="/img/downvote.png"/></button>
-                </form>
-              </div>
-            <% elsif !@question.upvoted?(current_user.id)%>
-              <div id="question_downvote_form" >
-                <form id='question_downvote' action="/question_downvote" method="post">
-                  <input type="hidden" name="downvote[user_id]" value="<%= current_user.id %>">
-                  <input type="hidden" name="downvote[question_id]" value="<%= @question.id %>">
-                  <input type="hidden" name="downvote[action]" value="downvote">
-                  <button class="submit_button" type="submit" id="question_downvote"><img src="/img/pressed_downvote.png"/></button>
-                </form>
-              </div>
-            <% else %>
-              <form id='question_upvote' action="/question_upvote" method="post">
-                <input type="hidden" name="upvote[user_id]" value="<%= current_user.id %>">
-                <input type="hidden" name="upvote[question_id]" value="<%= @question.id %>">
-                <input type="hidden" name="upvote[action]" value="upvote">
-                <button class="submit_button" type="submit" id="question_upvote"><img src="/img/pressed_upvote.png"/></button>
-              </form>
+
             <% end %>
 
-          <% end %>
+            <div id="question_votes">
+              <p id="question_count_votes"> <%= @question.votes_count %></p>
+              <p>votes</p>
+            </div>
+
+          </div>
         </div>
-      </div>
+
+
 
       <div id="all_answers">
         <% if @answers %>
