--- a/app/views/static/questions.erb
+++ b/app/views/static/questions.erb
@@ -1,3 +1,5 @@
+
+
 <div id="header">
   <div id="header_content">
     <div id="title">
@@ -96,6 +98,10 @@
       </div>
     <% end %>
   <% end %>
+
+  <div>
+  <%= will_paginate @all_questions %>
+  </div>
 </div>
 
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
