--- a/public/css/questions.css
+++ b/public/css/questions.css
@@ -261,3 +261,22 @@ div#form_edit_answer textarea {
   margin-bottom:10px;
 }
 
+div#votes_part form,
+div#question_votes p {
+  margin:0;
+  padding:0;
+  text-align:center;
+  color:#0E2895;
+}
+
+div#question_votes p#question_count_votes {
+  font-size:26px;
+}
+
+div#answer_content_on_question_answer_page {
+  width:95%;
+  border:1px solid #999999;
+  box-shadow:2px 2px #999999, inset 2px 2px #d9d9d9;
+  border-radius:5px;
+  padding:10px;
+}
