--- a/app/views/static/questions.erb
+++ b/app/views/static/questions.erb
@@ -38,7 +38,7 @@
                 <% if question.user_id != current_user.id %>
 
                   <% if !question.downvoted?(current_user.id) && !question.upvoted?(current_user.id)%>
-                    <div id="question_upvote_form" >
+                    <div id="question_upvote_active" >
                       <form id='question_upvote' action="/question_upvote" method="post">
                         <input type="hidden" name="upvote[user_id]" value="<%= current_user.id %>">
                         <input type="hidden" name="upvote[question_id]" value="<%= question.id %>">
@@ -105,4 +105,3 @@
 </div>
 
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
-<script src="/js/question.js"></script>
