--- a/public/css/questions.css
+++ b/public/css/questions.css
@@ -262,7 +262,6 @@ div#form_edit_answer textarea {
   margin-bottom:10px;
 }
 
-<<<<<<< Updated upstream
 div#votes_part form,
 div#question_votes p {
   margin:0;
@@ -278,28 +277,6 @@ div#question_votes p#question_count_votes {
 div#answer_content_on_question_answer_page {
   width:95%;
   border:1px solid #999999;
-  box-shadow:2px 2px #999999, inset 2px 2px #d9d9d9;
+  box-shadow:3px 3px #999999, inset 3px 3px #d9d9d9;
   border-radius:5px;
-  padding:10px;
-=======
-div#question_on_own_page {
-  width:95%;
-  padding:20px 10px 10px 40px;
-  border-radius:20px;
-  border:1px solid #999999;
-  box-shadow:2px 2px 0 #999999;
-}
-
-div#question_on_own_page form {
-  margin:0;
-}
-
-div#votes_on_question_answer {
-  text-align:center;
-}
-
-div#votes_on_question_answer p {
-  margin:0;
-  color:#0E2895;
->>>>>>> Stashed changes
-}
+  padding:20px 0 20px 20px;
