--- a/app/views/static/question_answers.erb
+++ b/app/views/static/question_answers.erb
@@ -26,7 +26,7 @@
           <div class="col-md-10">
             <%= "<p>#{@question.content}</p>" %>
           </div>
-          <div class="col-md-2">
+          <div class="col-md-2" id="question_votes_part">
             <% if @question.user_id != current_user.id %>
               <div id="votes_part">
                 <% if !@question.downvoted?(current_user.id) && !@question.upvoted?(current_user.id)%>
@@ -42,12 +42,42 @@
                       <input type="hidden" name="downvote[action]" value="downvote">
                       <button class="submit_button" type="submit" id="question_downvote"><img src="/img/downvote.png"/></button>
                     </form>
+                    <form id='question_downvoted' action="/question_downvote" method="post" class="hidden">
+                      <input type="hidden" name="downvote[user_id]" value="<%= current_user.id %>">
+                      <input type="hidden" name="downvote[question_id]" value="<%= @question.id %>">
+                      <input type="hidden" name="downvote[action]" value="downvote">
+                      <button class="submit_button" type="submit" id="question_downvote"><img src="/img/pressed_downvote.png"/></button>
+                    </form>
+                    <form id='question_upvoted' action="/question_upvote" method="post" class="hidden">
+                      <input type="hidden" name="upvote[user_id]" value="<%= current_user.id %>">
+                      <input type="hidden" name="upvote[question_id]" value="<%= @question.id %>">
+                      <input type="hidden" name="upvote[action]" value="upvote">
+                      <button class="submit_button" type="submit" id="question_upvote"><img src="/img/pressed_upvote.png"/></button>
+                    </form>
                 <% elsif !@question.upvoted?(current_user.id)%>
                     <form id='question_downvoted' action="/question_downvote" method="post">
                       <input type="hidden" name="downvote[user_id]" value="<%= current_user.id %>">
                       <input type="hidden" name="downvote[question_id]" value="<%= @question.id %>">
                       <input type="hidden" name="downvote[action]" value="downvote">
                       <button class="submit_button" type="submit" id="question_downvote"><img src="/img/pressed_downvote.png"/></button>
+                    </form>
+                    <form id='question_upvoted' action="/question_upvote" method="post" class="hidden">
+                      <input type="hidden" name="upvote[user_id]" value="<%= current_user.id %>">
+                      <input type="hidden" name="upvote[question_id]" value="<%= @question.id %>">
+                      <input type="hidden" name="upvote[action]" value="upvote">
+                      <button class="submit_button" type="submit" id="question_upvote"><img src="/img/pressed_upvote.png"/></button>
+                    </form>
+                    <form id='question_upvote_active' action="/question_upvote" method="post" class="hidden">
+                      <input type="hidden" name="upvote[user_id]" value="<%= current_user.id %>">
+                      <input type="hidden" name="upvote[question_id]" value="<%= @question.id %>">
+                      <input type="hidden" name="upvote[action]" value="upvote">
+                      <button class="submit_button" type="submit" id="question_upvote"><img src="/img/upvote.png"/></button>
+                    </form>
+                    <form id='question_downvote_active' action="/question_downvote" method="post" class="hidden">
+                      <input type="hidden" name="downvote[user_id]" value="<%= current_user.id %>">
+                      <input type="hidden" name="downvote[question_id]" value="<%= @question.id %>">
+                      <input type="hidden" name="downvote[action]" value="downvote">
+                      <button class="submit_button" type="submit" id="question_downvote"><img src="/img/downvote.png"/></button>
                     </form>
                 <% else %>
                   <form id='question_upvoted' action="/question_upvote" method="post">
@@ -56,42 +86,26 @@
                     <input type="hidden" name="upvote[action]" value="upvote">
                     <button class="submit_button" type="submit" id="question_upvote"><img src="/img/pressed_upvote.png"/></button>
                   </form>
+                  <form id='question_downvoted' action="/question_downvote" method="post" class="hidden">
+                      <input type="hidden" name="downvote[user_id]" value="<%= current_user.id %>">
+                      <input type="hidden" name="downvote[question_id]" value="<%= @question.id %>">
+                      <input type="hidden" name="downvote[action]" value="downvote">
+                      <button class="submit_button" type="submit" id="question_downvote"><img src="/img/pressed_downvote.png"/></button>
+                    </form>
+                  <form id='question_upvote_active' action="/question_upvote" method="post" class="hidden">
+                      <input type="hidden" name="upvote[user_id]" value="<%= current_user.id %>">
+                      <input type="hidden" name="upvote[question_id]" value="<%= @question.id %>">
+                      <input type="hidden" name="upvote[action]" value="upvote">
+                      <button class="submit_button" type="submit" id="question_upvote"><img src="/img/upvote.png"/></button>
+                    </form>
+                    <form id='question_downvote_active' action="/question_downvote" method="post" class="hidden">
+                      <input type="hidden" name="downvote[user_id]" value="<%= current_user.id %>">
+                      <input type="hidden" name="downvote[question_id]" value="<%= @question.id %>">
+                      <input type="hidden" name="downvote[action]" value="downvote">
+                      <button class="submit_button" type="submit" id="question_downvote"><img src="/img/downvote.png"/></button>
+                    </form>
                 <% end %>
 
-                <div class="hidden" id="question_upvote_active_base">
-                  <form action="/question_upvote" method="post">
-                    <input type="hidden" name="upvote[user_id]" value="<%= current_user.id %>">
-                    <input type="hidden" name="upvote[question_id]" value="<%= @question.id %>">
-                    <input type="hidden" name="upvote[action]" value="upvote">
-                    <button class="submit_button" type="submit" id="question_upvote"><img src="/img/upvote.png"/></button>
-                  </form>
-                </div>
-
-                <div class="hidden" id="question_downvote_active_base">
-                  <form action="/question_downvote" method="post">
-                    <input type="hidden" name="downvote[user_id]" value="<%= current_user.id %>">
-                    <input type="hidden" name="downvote[question_id]" value="<%= @question.id %>">
-                    <input type="hidden" name="downvote[action]" value="downvote">
-                    <button class="submit_button" type="submit" id="question_downvote"><img src="/img/downvote.png"/></button>
-                  </form>
-                </div>
-
-                <div class="hidden" id="pressed_upvote">
-                  <form id='question_upvoted' action="/question_upvote" method="post">
-                    <input type="hidden" name="upvote[user_id]" value="<%= current_user.id %>">
-                    <input type="hidden" name="upvote[question_id]" value="<%= @question.id %>">
-                    <input type="hidden" name="upvote[action]" value="upvote">
-                    <button class="submit_button" type="submit" id="question_upvote"><img src="/img/pressed_upvote.png"/></button>
-                  </form>
-                </div>
-                <div class="hidden" id="pressed_downvote">
-                  <form id='question_downvoted' action="/question_downvote" method="post">
-                    <input type="hidden" name="downvote[user_id]" value="<%= current_user.id %>">
-                    <input type="hidden" name="downvote[question_id]" value="<%= @question.id %>">
-                    <input type="hidden" name="downvote[action]" value="downvote">
-                    <button class="submit_button" type="submit" id="question_downvote"><img src="/img/pressed_downvote.png"/></button>
-                  </form>
-                </div>
               </div>
 
             <% end %>
