fix ajax for answers on question_answer page

--- a/app/views/static/question_answers.erb
+++ b/app/views/static/question_answers.erb
@@ -130,75 +130,75 @@
                 <div id="footer_answer">
 
                 <% if !answer.downvoted?(current_user.id) && !answer.upvoted?(current_user.id)%>
-                  <form id='answer_upvote_active' action="/answer_upvote" method="post">
+                  <form id='answer_upvote_active_<%= answer.id%>' action="/answer_upvote" method="post" class="answers" data-id="<%=answer.id%>">
                     <input type="hidden" name="upvote[user_id]" value="<%= current_user.id %>">
                     <input type="hidden" name="upvote[answer_id]" value="<%= answer.id %>">
                     <input type="hidden" name="upvote[action]" value="upvote">
                     <button class="submit_button" type="submit"><img src="/img/upvote.png"/></button>
                   </form>
-                  <form id='answer_downvote_active' action="/answer_downvote" method="post">
+                  <form id='answer_downvote_active_<%= answer.id%>' action="/answer_downvote" method="post" class="answers" data-id="<%=answer.id%>">
                     <input type="hidden" name="downvote[user_id]" value="<%= current_user.id %>">
                     <input type="hidden" name="downvote[answer_id]" value="<%= answer.id %>">
                     <input type="hidden" name="downvote[action]" value="downvote">
                     <button class="submit_button" type="submit"><img src="/img/downvote.png"/></button>
                   </form>
-                  <form id='answer_downvoted' action="/answer_downvote" method="post" class="hidden">
+                  <form id='answer_downvoted_<%= answer.id%>' action="/answer_downvote" method="post" class="answers hidden" data-id="<%=answer.id%>">
                     <input type="hidden" name="downvote[user_id]" value="<%= current_user.id %>">
                     <input type="hidden" name="downvote[answer_id]" value="<%= answer.id %>">
                     <input type="hidden" name="downvote[action]" value="downvote">
                     <button class="submit_button" type="submit"><img src="/img/pressed_downvote.png"/></button>
                   </form>
-                  <form id='answer_upvoted' action="/answer_upvote" method="post" class="hidden">
+                  <form id='answer_upvoted_<%= answer.id%>' action="/answer_upvote" method="post" class="answers hidden" data-id="<%=answer.id%>">
                     <input type="hidden" name="upvote[user_id]" value="<%= current_user.id %>">
                     <input type="hidden" name="upvote[answer_id]" value="<%= answer.id %>">
                     <input type="hidden" name="upvote[action]" value="upvote">
                     <button class="submit_button" type="submit"><img src="/img/pressed_upvote.png"/></button>
                   </form>
                 <%  elsif !answer.downvoted?(current_user.id) %>
-                  <form id='answer_upvoted' action="/answer_upvote" method="post">
+                  <form id='answer_upvoted_<%= answer.id%>' action="/answer_upvote" method="post" class="answers" data-id="<%=answer.id%>">
                     <input type="hidden" name="upvote[user_id]" value="<%= current_user.id %>">
                     <input type="hidden" name="upvote[answer_id]" value="<%= answer.id %>">
                     <input type="hidden" name="upvote[action]" value="upvote">
                     <button class="submit_button" type="submit"><img src="/img/pressed_upvote.png"/></button>
                   </form>
-                  <form id='answer_upvote_active' action="/answer_upvote" method="post" class="hidden">
+                  <form id='answer_upvote_active_<%= answer.id%>' action="/answer_upvote" method="post" class="answers hidden" data-id="<%=answer.id%>">
                     <input type="hidden" name="upvote[user_id]" value="<%= current_user.id %>">
                     <input type="hidden" name="upvote[answer_id]" value="<%= answer.id %>">
                     <input type="hidden" name="upvote[action]" value="upvote">
                     <button class="submit_button" type="submit"><img src="/img/upvote.png"/></button>
                   </form>
-                  <form id='answer_downvote_active' action="/answer_downvote" method="post" class="hidden">
+                  <form id='answer_downvote_active_<%= answer.id%>' action="/answer_downvote" method="post" class="answers hidden" data-id="<%=answer.id%>">
                     <input type="hidden" name="downvote[user_id]" value="<%= current_user.id %>">
                     <input type="hidden" name="downvote[answer_id]" value="<%= answer.id %>">
                     <input type="hidden" name="downvote[action]" value="downvote">
                     <button class="submit_button" type="submit"><img src="/img/downvote.png"/></button>
                   </form>
-                  <form id='answer_downvoted' action="/answer_downvote" method="post" class="hidden">
+                  <form id='answer_downvoted_<%= answer.id%>' action="/answer_downvote" method="post" class="answers hidden" data-id="<%=answer.id%>">
                     <input type="hidden" name="downvote[user_id]" value="<%= current_user.id %>">
                     <input type="hidden" name="downvote[answer_id]" value="<%= answer.id %>">
                     <input type="hidden" name="downvote[action]" value="downvote">
                     <button class="submit_button" type="submit"><img src="/img/pressed_downvote.png"/></button>
                   </form>
                 <% elsif  !answer.upvoted?(current_user.id)%>
-                  <form id='answer_downvoted' action="/answer_downvote" method="post">
+                  <form id='answer_downvoted_<%= answer.id%>' action="/answer_downvote" method="post" class="answers answers" data-id="<%=answer.id%>">
                     <input type="hidden" name="downvote[user_id]" value="<%= current_user.id %>">
                     <input type="hidden" name="downvote[answer_id]" value="<%= answer.id %>">
                     <input type="hidden" name="downvote[action]" value="downvote">
                     <button class="submit_button" type="submit"><img src="/img/pressed_downvote.png"/></button>
                   </form>
-                  <form id='answer_upvote_active' action="/answer_upvote" method="post" class="hidden">
+                  <form id='answer_upvote_active_<%= answer.id%>' action="/answer_upvote" method="post" class="answers hidden" data-id="<%=answer.id%>">
                     <input type="hidden" name="upvote[user_id]" value="<%= current_user.id %>">
                     <input type="hidden" name="upvote[answer_id]" value="<%= answer.id %>">
                     <input type="hidden" name="upvote[action]" value="upvote">
                     <button class="submit_button" type="submit"><img src="/img/upvote.png"/></button>
                   </form>
-                  <form id='answer_downvote_active' action="/answer_downvote" method="post" class="hidden">
+                  <form id='answer_downvote_active_<%= answer.id%>' action="/answer_downvote" method="post" class="answers hidden" data-id="<%=answer.id%>">
                     <input type="hidden" name="downvote[user_id]" value="<%= current_user.id %>">
                     <input type="hidden" name="downvote[answer_id]" value="<%= answer.id %>">
                     <input type="hidden" name="downvote[action]" value="downvote">
                     <button class="submit_button" type="submit"><img src="/img/downvote.png"/></button>
                   </form>
-                  <form id='answer_upvoted' action="/answer_upvote" method="post" class="hidden">
+                  <form id='answer_upvoted_<%= answer.id%>' action="/answer_upvote" method="post" class="answers hidden" data-id="<%=answer.id%>">
                     <input type="hidden" name="upvote[user_id]" value="<%= current_user.id %>">
                     <input type="hidden" name="upvote[answer_id]" value="<%= answer.id %>">
                     <input type="hidden" name="upvote[action]" value="upvote">
@@ -207,7 +207,7 @@
                 <% end %>
 
                   <div id="answer_votes">
-                    <p id="answer_count_votes"> <%= answer.votes_count %></p>
+                    <p id="answer_count_votes" data-id="<%= answer.id %>"> <%= answer.votes_count %></p>
                     <p>votes</p>
                   </div>
                 </div>
