fix all errors message for log in and for sign up fix all redirect

--- a/app/views/static/profile.erb
+++ b/app/views/static/profile.erb
@@ -74,7 +74,7 @@
           <input id="title" type="text" name="question[title]" placeholder="Title">
           <textarea id="content" name="question[content]" placeholder="content"></textarea>
           <input type="hidden" name="question[user_id]" value="<%= current_user.id%>">
-          <input id="submit" type="submit" value="Add question">
+          <input id="submit" class="submit_add_question" type="submit" value="Add question">
         </form>
       </div>
 
