--- a/app/views/static/index.erb
+++ b/app/views/static/index.erb
@@ -6,28 +6,38 @@
       <div class="col-md-6" id="left">
           <h2>Sign Up</h2>
           <form action="/user" method="post">
-            FIRST NAME<br>
-            <input type="text" name="user[first_name]">
+            <% if @user.errors && @user.errors.messages[:first_name] %>
+                First Name <%= @user.errors.messages[:first_name].first %>
+            <% end %><br>
+            <input type="text" name="user[first_name]" placeholder="First Name">
             <br>
             <br>
-            LAST NAME<br>
-            <input type="text" name="user[last_name]">
+            <% if @user.errors && @user.errors.messages[:last_name] %>
+                Last Name <%= @user.errors.messages[:last_name].first %>
+            <% end %><br>
+            <input type="text" name="user[last_name]" placeholder="Last Name">
             <br>
             <br>
-            EMAIL<br>
-            <input type="text" name="user[email]">
+            <% if @user.errors && @user.errors.messages[:email] %>
+                Email <%= @user.errors.messages[:email].first  %>
+            <% end %><br>
+            <input type="text" name="user[email]" placeholder="Email">
             <br>
             <br>
-            PASSWORD<br>
-            <input type="password" name="user[password]" placeholder="minimum 5 character">
+            <% if @user.errors && @user.errors.messages[:password] %>
+                Password <%= @user.errors.messages[:password].first %>
+            <% end %><br>
+            <input type="password" name="user[password]" placeholder="Password">
             <br>
             <br>
-            <input type="submit" value="Sign Up">
+            <input type="submit" value="Sign Up" id="Sign_up">
           </form>
       </div>
       <div class="col-md-6" id="right">
           <h2>Login</h2>
           <form action="/login" method="post">
+            <%= @error if @error %>
+            <br>
             <input type="text" name="email" placeholder="Email">
             <br>
             <br>
